manifests/app-resources/mlflow-resources.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: mlflow
  namespace: mlflow
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: mlflow
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mlflow
  namespace: mlflow
spec:
  parentRefs:
  - name: agentgateway-external
    namespace: agentgateway-system
  hostnames:
  - "mlflow.localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: mlflow-mlflow
      namespace: mlflow
      port: 5000
