manifests/app-resources/otel-demo-resources.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: otel-demo-grant
  namespace: otel-demo
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: default
  to:
    - group: ""
      kind: Service
      name: frontend-proxy
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: otel-demo-route
  namespace: default
spec:
  parentRefs:
    - name: gateway
      namespace: default
  hostnames:
    - otel.localhost
  rules:
    - backendRefs:
        - name: frontend-proxy
          namespace: otel-demo
          port: 8080
