manifests/app-resources/phoenix-resources.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: phoenix
  namespace: phoenix
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: phoenix
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: phoenix
  namespace: phoenix
spec:
  parentRefs:
  - name: agentgateway-external
    namespace: agentgateway-system
  hostnames:
  - "phoenix.localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: phoenix-svc
      namespace: phoenix
      port: 6006
