manifests/app-resources/qdrant-resources.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: qdrant
  namespace: qdrant
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: qdrant
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qdrant
  namespace: qdrant
spec:
  parentRefs:
  - name: agentgateway-external
    namespace: agentgateway-system
  hostnames:
  - "qdrant.localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: qdrant
      namespace: qdrant
      port: 6333
